Add source code link

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li ><a href="https://docs.google.com/a/mozilla.com/spreadsheets/d/1CiQAc5pGpV-sFFVP8-5dfnzvTxh-tStAbj32XqiO_Kg/edit#gid=825855451">Source Data</a></li>
+                <li ><a href="https://github.com/djmitche/worktracking">Source Code</a></li>
               </ul>
           </ul>
           <ul class="nav navbar-nav navbar-right">
