--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.1/angular.js"></script>
     <script src="tabletop.js"></script>
-    <script src="index.js"></script>
+    <script src="work.js"></script>
     <title>Work Tracking</title>
 </head>
 <body ng-app="work" ng-controller="WorkController">
