--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.1/angular.js"></script>
-    <script src="tabletop.js"></script>
+    <script src="angular-googleapi.js"></script>
     <script src="indexeddb.js"></script>
     <script src="work.js"></script>
     <title>Work Tracking</title>
@@ -57,7 +57,18 @@
         </div><!--/.nav-collapse -->
       </div>
     </div>
-    <div class="container-fluid">
+    <div class="container-fluid" ng-show="error">
+        <div class="alert alert-danger">{{error}}</div>
+    </div>
+    <div class="container-fluid" ng-hide="authenticated">
+        <div class="alert alert-info">Authenticating to Google</div>
+    </div>
+    <div class="container-fluid" ng-show="authenticated">
+        <div class="row">
+            <pre class="col-xs-12">
+                {{rawxml}}
+            </pre>
+        </div>
         <div class="row">
             <div class="col-xs-4" ng-repeat="sheet in ['upcoming', 'wip', 'completed']">
                 <h2>{{sheet}}</h2>
