--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.1/angular.js"></script>
     <script src="angular-googleapi.js"></script>
+    <script src="angular-xml.js"></script>
     <script src="indexeddb.js"></script>
     <script src="work.js"></script>
     <title>Work Tracking</title>
